uDTN: timesync: eval: data cleaning works

--- a/examples/uDTN/climbnet/eval/plots.ipynb
+++ b/examples/uDTN/climbnet/eval/plots.ipynb
@@ -2,93 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 0,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAyAAAAJYCAMAAACtqHJCAAABPlBMVEX///8AAACgoKD/AAAAwAAA\ngP/AAP8A7u7AQADIyABBaeH/wCAAgEDAgP8wYICLAABAgAD/gP9//9SlKir//wBA4NAAAAAaGhoz\nMzNNTU1mZmZ/f3+ZmZmzs7PAwMDMzMzl5eX////wMjKQ7pCt2ObwVfDg///u3YL/tsGv7u7/1wAA\n/wAAZAAA/38iiyIui1cAAP8AAIsZGXAAAIAAAM2HzusA////AP8AztH/FJP/f1DwgID/RQD6gHLp\nlnrw5oy9t2u4hgv19dyggCD/pQDugu6UANPdoN2QUEBVay+AFACAFBSAQBSAQICAYMCAYP+AgAD/\ngED/oED/oGD/oHD/wMD//4D//8DNt57w//Cgts3B/8HNwLB8/0Cg/yC+vr7f399fX18fHx+fn58/\nPz+/v7++Hj6swToAepuKMH9Lu/6aAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAU6klEQVR4nO3da4Kj\nNhZAYVgHmxOvnnj/GxgLXMZ2AWXQvehKOt+PGjqZFq4unUjYkFQVAAAAAAAAAAAAAAAAAAAAAADp\ncV09/U9b163bOgJKNfRTIF3jXNNtHQGFatqqnv/nru3Xj4BCjfcFwgcyjNOvhvUjoFDdOAfSOf8r\n160fAWVqm2oOpJ5/Xa8fAUWat08EAqyaN1FHt1g1kIqwQJZhjlykKy8pDM/wYsOLnPHo27zZ/Sky\nfLbDiwVy5IPC7P4UGT7b4eUCOXCrSXZ/igyf7fBR3mHK7k+R4bMdnkAYnuF3hs8xEEAMgQA7CATm\n1PMnzF9vecY29PO8ndeiNbC5kyIZdf/4bPnLQLrGEQjKUVdD/zhY+Xsbv0XttURAINhTV+55k984\n1PV8y5Ib6m5+OM//xa7/+C1qryUCAsGe+ucupboau9653j905PxR0/q5cz+8/43x47eovZbrEQj2\nPJ9QrR838vXt48mjqvF/bzp8vweWQFCOeZWYDn49O/F8tOL9KQoCQTmm+dE0/mD16buVJzV+Tal/\nx22/lqsRCPbM82NwuyvI2m9Rey0XIxDsmefH/SJj6xrk979IikBQjsf8aPpf72L1P+9iOS7SUayf\n+THcD/qNz0Eef3H+/0s8Pf7Ha7kUgSAVBALsIBBgB4EAOwgE2EEgwA4CAXYQCMw5+Mjt2Hb1oPVf\naSIQmHPwkVv/meHYKRVCIDDn4CO3001aWv+ZJgKBOSceuVWbVAQCc048clv1rCAoxYlHbt1HL6Kv\n5XIEgj3HH7l1g1IfBAJ7Dj9yu7J+/O+47ddyNQLBnqOP3KrtryoCgUEHH7nV7INAYM/BR27VPkV/\neS3XIhDsOfjI7eOSxKm+lksRCFJBIMAOAgF2EAiwg0CAHQQC7CAQYAeBwJwTj9x2Wp8WEgjMOfjI\n7dC7yo1Do/NaVEa1eFIk48R/5fZxG6PGa4mAQLDn1CO3Sg+lEwjMOfPILVssFOPwI7f+XsXh9zhS\nr+VyBII9xx+5re6rDCsICnH4kVtvfL8G+e+4tZdyIxCYc/SR29ffJep2IxDYc/CR29ko/y7W7cYW\nCwYdfeR2dNX8/xF1830QCOw5+MjtdKtJK9/Hv9fXcikCgXXT8lEFz9WX+8SWdxZcW9etez96QyCw\n7fbTR+hcfblPbBmpa5xruvejNwQC0555CM3V6b2350jzXQL+nYbl6B2BwLDbSx9CgXSvI81XT/5N\nhuXoHYHArtc8ZObqY4vl30pwVfX7s51feywCgVnvfYTP1ed9Yvfl4n69Mb7eE/Byd4DsSQEdt48+\nJObq631i/lEwAkGYg4/ceq4TmVSfeQjN1eVTfn+5/sUWa+1mM+Dh4CO33tALTKf35UNylj5H8YFw\nkY4wxx+5bVqBSfV7+dg830HLCuLT521ehDn8yK2fgMGTarWP4A8Kn/eJTR8ZThfpfFCIMIcfuX15\nb+isX1fny2sJsdwnNh85/xe51QRBjj5y277fyXHGRh7crAiDDj5yO6cSMqm2lo/AYU8jEOw5+Mjt\n83rl1e247ddyNQLBnoOP3NZ12Duy28tHRSAw6NQjt+fz2OuDQGDPwUdu337TUft5EAgMOvjI7ftv\nOuSP5ePssKEIBCb8mQeBoFx/Lx8VgaBY3+RBICjVd30QCIr01fbKIxAU6Ns8CAQF+nr5qAgE5TmQ\nB4GgOIf6IBCU5cj2yiMQlORgHgSCkhxdPioCQUGO50EgKMeZPggEhTixvfIIBEU4lweBoAgnl4+K\nQFCC03kQCAoQ0AeBIHfnt1cegSBvQXkQCPIWtnxUBIKsheZBIMhY8PJREQjyJZAHgSBbIn0QCPIk\nsb3yCAQ5EsqDQJAjqeWjIhBkSC4PAkF+JPsgEGRGcHvlEQiyIpsHgSArwstHRSDIiXgeBIKMKPRB\nIMiF/PbKIxDkQSUPAkEedJaPikCQBa08CAQZUFs+KgJB+hTzIBAkT7UPAkHaNLdXHoEgZcp5EAhS\npr18VASChOnnQSBI1xV9EAgSdcH2yiMQJOmaPILn6th2dTf0/tC1dd26rSPJk6J4Fy0fVfBcHXpX\nuXFo7odd41zTVRtHkidF6S7LQ2iuuvsoTeuP2n79SOGkKNaFfQgFcl8khtEfjcP6kcJJUajrtlee\nxFydtlid84c+lbUj+ZOiUJfmITBX67thGahePxI+KUp17fJRicxV13cNgeAKV+chNFfHjY3V5hZr\nJnFqlOTaqw/BWVpzkQ51l2+vPLEVhLd5oStGHuEfFI7OX4P4lYIPCqEoyvJRydxq0k47KW41gZ5I\neXCzIlLwX7Q+CAT23W7/op2bQGBdvOWjIhBYF+vq/IFAYFrcPAgEpkVePioCgWXR8yAQGGagDwKB\nVfG3Vx6BwCYTeRAIbLKxfFQEApOs5EEgsMhOHwQCc8xsrzwCgTGW8iAQGGNq+agIBLYYy4NAYIq5\nPggEdljbXnkEAisM5kEgsMLi8lERCIywmQeBwASjy0dFILDAbB4EAgMM90EgiM3u9sojEMRlOg8C\nQVy2l4+KQBCV9TwIBDHZ74NAEI357ZVHIIgkhTwIBJEksXxUBII4EsmDQBBFMn0QCK6XyvbKIxBc\nLaE8CARXS2n5qAgEF0srDwLBtVLrg0BwocS2Vx6B4DLp5UEguEyCy0dFILhKknkQCK6R5vJREQgu\nkWoeBIIrpNsHgUBdstsrj0CgLOU8CATKkl4+KgKBrsTzIBCoSr4PAoGe1LdXHoFASwZ5EAi05LB8\nVMFzdWy7eujnkSb+yLV13br3I8mTIgF55BE8V+thrMaufx+pa5xruvcjyZPCvlz6CJ2rjf/iureR\nmtZ/bfvXI9GTwrpMtleeyFyt30a6Lyp34/B6pHBSmJVPHjJztZ9XkK7upuuNzn+ZlpXlSP6ksCqj\n5aMSmauumxaK+3Jxv94Yn0PWr0fiJ4VVWeUhMVfdvJGa9QOBlC2zPsLn6mP9+PlV/dUWa3lLGFm5\n3f7FfgliZGbpex9TIFykFyu35aMKnqsffUxbLN7mLVReV+cPgXN16Jcj97hI54PCMuWYR/gn6TM3\n33TSfd5gwq0mxchy+ai4WREyMs2DQCAi2z4IBOFy3V55BIJQGedBIAiV8/JREQgC5Z0HgSBM7n0Q\nCAJkvr3yCASn5Z8HgeC0ApaPikBwVhF5EAhOKqQPAsEZZWyvPALBccXkQSA4rpzloyIQHFZSHgSC\no8rqg0BwSE7/2pKvEAgOKGz5qAgEBxR1df5AIPhWgXkQCL5V4vJREQi+VGYeBILvlNoHgeALhW6v\nPALBn8rNg0Dwp4KXj4pA8Jei8yAQ/KHwPggEe8reXnkEgm3F50Eg2MbyUREINpGHRyBYRx8TAsEa\ntlcPBIIV5PGDQPALy8eCQPCJPF4QCN6xfLwhELwhj3cEglf08YFAsGB79QuB4Ik8fiMQPLB8rCEQ\nzMhjFYFgQh/rCAQV26ttBAKWjx0EApaPHQRSPPLYQyClo49dBFI2tld/IJCikcdfCKRgLB9/I5By\nkccXAufq2Hb10E+Hrq3r1m0dSZ4UIujjG4FztR7GauymQrrGuabbOpI8KQSwvfpO4Fxt/BfnE2ha\nf9j260eiJ0U48viSyFz1g9yXkrtxWD9SOCnOY/n4msRc7f0K0jl/6BeTtSP5k+I88viewFx13bgM\nVK8fiZ8Up7F8HBE+V928kSKQRJDHIcFzdV4/Dm6xZqGnxgn08S2ZWfrTBxfpSWB7dVTgXH32wdu8\nKSCPwwLn6rBMfj4otI7l44TQT9JnruJWE/PI4wxuViwFfZxCIGVge3USgRSBPM4ikAKwfJxHIPkj\njwAEkj36CEEgmWN7FYZA8kYegQgkZywfwQgkY+QRjkDyRR8CCCRXt9t/sV9CDggkUywfMggkS1yd\nSyGQHJGHGALJD8uHIALJDnlIIpDc0IcoAskL2ythBJIV8pBGIBlh+ZBHIPkgDwUEkg360EAgmWB7\npYNA8kAeSggkBywfaggkA+Shh0DSRx+KCCR1bK9UEUjiyEMXgSSN5UMbgaSMPNQRSMLoQx+BJIvt\n1RUIJFXkcQkCSRPLx0UIJEnkcRUCSRDLx3UIJD3kcSECSQ59XIlAEsP26loEkhbyuBiBpITl43IE\nkhDyuB6BpIM+IiCQVLC9ioJAEkEecRBIElg+YiGQFJBHNASSAPqIh0DMY3sVE4FYRx5REYhtLB+R\nEYhp5BEbgRj2H31ERyB2kYcBoXN1bOvHEPXEH7n7X2vd+5HoSctAHxaEztWucT+BvP4113TvR6In\nLQFX5zYIzNXPQJrWf2371yPxk+aOPIxQCGQY/ddxeD0SP2neWD7MEAykq7vpeqPzXyrXvR6JnzRr\n5GGHXCD35eJ+vTG+rii/rk7kTpoz+jBELpBJPxBIILZXpggH4t/S+mKLtbwljA/kYYXYLP0MhIv0\n81g+rFHYYvE272nkYY5YIEPvHhfpfFB4Fn3YEzpXnxu1sf15m5dbTc5he2URNytaQR4mEYgNLB9G\nEYgJ5GEVgVhAH2YRSHxsrwwjkOjIwzICiYzlwzYCiYs8jCOQmFg+zCOQiMjDPgKJhz4SQCCxsL1K\nAoFEQh5pIJAoWD5SQSAxkEcyCCQC+kgHgVyO7VVKCORq5JEUArkWy0diCORS5JEaArkSfSSHQK7D\n9ipBBHIZ8kgRgVyE5SNNBHIN8kgUgVyCPlJFIBdge5UuAtFHHgkjEG0sH0kjEGXkkTYCUcXykToC\n0UQeySMQRfSRPgJRw/YqBwSihTyyQCA6WD4yQSAqyCMXBKKBPrJBIPLYXmWEQMSRR04IRBjLR14I\nRBZ5ZIZARNFHbghEENur/BCIHPLIEIFIYfnIEoEIIY88EYgM+sgUgUhge5UtAhFAHvkikGAsHzkj\nkFDkkTUCCcPykTkCCUIeuSOQEPSRvdC5Orb1Ywh3P2rd1pHoSY1ge1WA0LnaNa5+Hrmm2zoSPakN\n5FECgbk6D9G0/mvbrx+JnzQ6lo8yiAUyjP7rOKwfiZ80NvIohFggnfNfXbd+JH7SyOijFGKB1M9f\nrB2JnzQqtlflIJDjyKMgcbZYs/BTx8DyUQixWVrWRTp5lIW3eY+hj8KIBVLEB4Vsr4oTOleXjVoB\nt5qQR3m4WfFrLB8lIpBvkUeRCOQ7/9FHmQjkK7fbv9gvAVEQyDdYPopFIH/j6rxgBPIn8igZgfyB\n5aNsBLKPPApHILvoo3QEsoPtFQhkG3mAQDaxfKAikE3kAY9A1tEHJgSyhu0VHghkBXngB4H8wvKB\nBYF8Ig+8IJAP9IFXBPKG7RXeEcgr8sAHAlmwfOAXAnkiD/xGIA//ow+sIJAZeWAVgUzoA+sIpOLq\nHNsIhOUDOwiE5QM7ig+EPLCn9EDoA7vKDoTtFf5QdCDkgb8UHAjLB/5WbiDkgS8UGwh94BuFBsL2\nCt8pMxDywJdKDITlA18rMBDywPfKC4Q+cEBpgbC9wiGFBUIeOKaoQFg+cFRJgZAHDisnEJYPnFBM\nIOSBM0oJhD5wShmBsL3CSUUEQh44q4BAWD5wXv6BkAcCZB8IfSBE5oGwvUKYvAMhDwSSm6v1xB+5\ntq5b936kdNJdLB8IJhjI86hrnGu69yOlk+4hD4RTCKRp/de2fz3SOukO+oAAhUCG0X8dh9cjrZNu\nYnsFEYKBdHU3XW90/kvlutcjrZNuIQ/IkJur9+Xifr0xPoesX4+0TrqO5QNShOdqPxgIhDwgRniu\nuvqrLdbylrAC+oAElVnqA4l7kc72CpIUtlhR3+YlD4gSm6tD7x4X6RE/KGT5gDCxuTq2P2/zxrvV\nhDwgLaObFVk+IC+fQMgDCrIJhD6gIZNA2F5BRx6BkAeU5BAIywfUZBAIeUBP+oHQBxSlHgjbK6hK\nPBDygK6kA2H5gLaUAyEPqEs4EPqAvmQDYXuFK6QaCHngEmkGwvKBiyQZCHngKikGQh+4THqB3G7/\npF4H8JfkAmH5wJUSC4Src1wrrUDIAxdLKRCWD1wuoUDIA9dLJxD6QASpBML2ClEkEgh5II4kAmH5\nQCwpBEIeiCaBQOgD8ZgPhO0VYrIeCHkgKtuBsHwgMtOBkAdisxwIfSA6u4GwvYIBZgMhD1hgNBCW\nD9hgMxDygBEWA/kffcAKg4Hwry2BHfYCYfmAIdYC4eocphgLhDxgi6lAWD5gjaVAyAPmGAqEPmCP\nmUDYXsEiK4GQB0yyEQjLB4wyEQh5wCoLgdAHzIofCNsrGBY9EPKAZZEDYfmAbcqBuLauW7d5UvKA\nccqBdI1zTbd1UqU+lL8nhi9peN0zNq3/2varJ1XbXmX3Q2L4eMPrnnEY/ddxWDup3vYqux8Sw8cb\nXveMnfNf3eceq9a9Os/uh8Tw8YbXPWO9fpJa9+o8ux8Sw8cbPk4guu9eZfdDYvh4w8fZYgGpUA1k\n4yIdgLfxNi+AyfoHhQAm67eaAAAAAAAAAAAA5Enjs5HltplldJnzjO3P7ThrIwefYxle41sY264e\n5vsYNF79y/Bar76bx9d69Y/h9abPGRqfri+3lC2jy5znPkq9PXLwOZbhNb6Fehirseu3BhUcXuPV\nD72r3Dg0G4MKDq83fU5QuT/r+R0uo8udp94cWeQcn4EIDu9/+PPN1Cqvfhle8Qfg/wGi9mc/D687\nfY5SucP3+R0uo8udp94cWeQcn4GIfwv1xqCCwyu+eh+g4quf+ladPkdtPCMSpr5vJ6cN4zK63Hnm\nP761kUXO8ROI1rfQdxuDCg6v9+qnPZDeq39ssTSnz1EbTxmGufd+3zCOr6PLnad+HagWP8fjd2t9\nC86Pqffq5+GVXr2/dB4qtVf/M7zu9Dn8qtTO3A8pBzKR/xbcvFfQevWP4WcKPwDXd41m3tPwM63p\nc5Te2uWvt9LdYk3Ev4XHP+C1Xv3P8I9fafwAxo3XLDj8TGv6HKV39eO/w3Qv0ifS38JzAuu8+vc+\nlH4AG4MKDj/Tmj5H6b1/5tfIdN/mnQh/C8sEVnn1H33o/AD8P+IV3+ZdVhCt6XOYwicw02c+01WW\nxic9jxms8kHhc3iVb2FYfr46H7UtRxqvfnT+ImFrULnhdafPYQqf4U93DYjfBjJZ/uUvKreaPIdX\n+RYeo7uNQeWGV3n186Dj1qBywytOHwAAAAAAAAAAAAAAAAAAAAAA4vg/EZM7nnzYu8AAAAAASUVO\nRK5CYII=\n",
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "set term png size 800,600\n",
-       "Terminal type set to 'png'\n",
-       "Options are 'nocrop enhanced size 800,600 font \"/usr/share/fonts/dejavu/DejaVuSans.ttf,12\" '\n",
-       "set xrange [0:3600]\n",
-       "set output '/tmp/gnuplot-inline-1474451208.8826816.239924119462.png'\n",
-       "plot \"no_sync_10Hz_0.csv\" u ($0/10):1 w l t \"Node 1\" lt rgb \"#BE1E3E\" lw 1 , \"no_sync_10Hz_1.csv\" u ($0/10):1 w l t \"Node 2\" lt rgb \"#acc13a\" lw 1,  \"no_sync_10Hz_2.csv\" u ($0/10):1 w l t \"Node 3\" lt rgb \"#007a9b\" lw 1, \"no_sync_10Hz_3.csv\" u ($0/10):1 w l t \"Node 4\" lt rgb \"#8a307f\" lw 1\n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "unset output\n"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set term png size 800,600\n",
     "set xrange [0:3600]\n",
     "plot \"no_sync_10Hz_0.csv\" u ($0/10):1 w l t \"Node 1\" lt rgb \"#BE1E3E\" lw 1 ,\\\n",
     "\"no_sync_10Hz_1.csv\" u ($0/10):1 w l t \"Node 2\" lt rgb \"#acc13a\" lw 1,\\\n",
     " \"no_sync_10Hz_2.csv\" u ($0/10):1 w l t \"Node 3\" lt rgb \"#007a9b\" lw 1,\\\n",
-    "\"no_sync_10Hz_3.csv\" u ($0/10):1 w l t \"Node 4\" lt rgb \"#8a307f\" lw 1\n"
+    "\"no_sync_10Hz_3.csv\" u ($0/10):1 w l t \"Node 4\" lt rgb \"#8a307e\" lw 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 0,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAyAAAAJYCAMAAACtqHJCAAABPlBMVEX///8AAACgoKD/AAAAwAAA\ngP/AAP8A7u7AQADIyABBaeH/wCAAgEDAgP8wYICLAABAgAD/gP9//9SlKir//wBA4NAAAAAaGhoz\nMzNNTU1mZmZ/f3+ZmZmzs7PAwMDMzMzl5eX////wMjKQ7pCt2ObwVfDg///u3YL/tsGv7u7/1wAA\n/wAAZAAA/38iiyIui1cAAP8AAIsZGXAAAIAAAM2HzusA////AP8AztH/FJP/f1DwgID/RQD6gHLp\nlnrw5oy9t2u4hgv19dyggCD/pQDugu6UANPdoN2QUEBVay+AFACAFBSAQBSAQICAYMCAYP+AgAD/\ngED/oED/oGD/oHD/wMD//4D//8DNt57w//Cgts3B/8HNwLB8/0Cg/yC+vr7f399fX18fHx+fn58/\nPz+/v7++Hj6swToAepuKMH9Lu/6aAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAU6ElEQVR4nO3da4Kj\nthJAYVgHmxOvJL3/DcQCt7HdgA2qQiXpfD/6Mskd4Z7RiYQNM1UFAAAAAAAAAAAAAAAAAAAAAEB6\nXFdP/9PWdeu2joBSDf0USNc413RbR0Chmraq5/+5afv1I6BQ422B8IEM4/SjYf0IKFQ3zoF0zv/I\ndetHQJnappoDqecf1+tHQJHm7ROBAKvmTdTRLVYNpCIskGWYIxfpyksKwzO82PAiZzz6Nm92v4oM\nn+3wYoEc+aAwu19Fhs92eLlADtxqkt2vIsNnO3yUd5iy+1Vk+GyHJxCGZ/id4XMMBBBDIMAOAoE5\n9fwJ89dbnrEN/Txv57VoDWzupEhG3d8/W/4ykK5xBIJy1NXQ3w9W/t3GT1F7LREQCPbUlXvc5DcO\ndT3fsuSGupsfzvP/sOvfforaa4mAQLCn/r1Lqa7Grneu9w8dOX/UtH7u3A5v/2J8+ylqr+V6BII9\njydU6/uNfH17f/Koavy/mw5f74ElEJRjXiWmgz/PTjwerXh9ioJAUI5pfjSNP1h9+m7lSY0/U+qf\n47Zfy9UIBHvm+TG43RVk7aeovZaLEQj2zPPjdpGxdQ3y9w+SIhCU4z4/mv7Pu1j977tYjot0FOt3\nfgy3g37jc5D7P5z//xJPj394LZciEKSCQIAdBALsIBBgB4EAOwgE2EEgwA4CgTkHH7kd264etP6W\nJgKBOQcfufWfGY6dUiEEAnMOPnI73aSl9dc0EQjMOfHIrdqkIhCYc+KR26pnBUEpTjxy6956EX0t\nlyMQ7Dn+yK0blPogENhz+JHblfXj3+O2X8vVCAR7jj5yq7a/qggEBh185FazDwKBPQcfuVX7FP3p\ntVyLQLDn4CO390sSp/paLkUgSAWBADsIBNhBIMAOAgF2EAiwg0CAHQQCc048cttpfVpIIDDn4CO3\nQ+8qNw6NzmtRGdXiSZGME3/L7f02Ro3XEgGBYM+pR26VHkonEJhz5pFbtlgoxuFHbv29isPfcaRe\ny+UIBHuOP3Jb3VYZlRXkh0BgzuFHbr3x9Rrkv+NWXskPgcCeo4/cPv8sUT8/bLFgz8FHbmej+LtY\nP7c+CAT2HH3kdnTV/P8R5fMgEBh08JHb6VaTVriPn7kPAgFW3PMInqtP94kt7yy4tq5b93r0gkBg\n2s+jj9C5+nSf2DJS1zjXdK9HLwgElv38LG/5iszV6b23x0jzXQL+nYbl6BWBwLBl+aikAumeR5qv\nnvybDMvRKwKBWT8vfYjM1fsWy7+V4Krq72c7f/ZYBAKrXvMQmKuP+8Ruy8XtemN8vifg6e4A2ZMC\nKn7e+5CYq8/3iflHwQgEYQ4+cuu5TmJS/clDaK4un/L7y/UvtlhrN5sBdwcfufWGXmA6vV19CM7S\nxyg+EC7SEeb4I7dNGz6p/m6vts930LKC+PR5mxdhDj9y6ydg6KRazSP8g8LHfWLTR4bTRTofFCLM\n4Udun94bOml9+ahkbjWZ7hObj5z/h9xqgiBHH7ltX+/kOGErD25WhEEHH7mdUwmZVNt9EAjsOfjI\n7eN65dnPcduv5WoEgj0HH7mt66B3ZHeWj4pAYNCpR25P57HbB4HAnoOP3L78pIM+5EEgMOjgI7ev\nP+mIfz/2QSAo1/ODUVsIBKX6vHxUBIJSfbo6vyMQFOm7PAgERfpy+agIBCX65ur8jkBQnK+Xj4pA\nUJzvt1cegaAsh/IgEJTl2PJREQiKcjQPAkFJjvdBICjG4e2VRyAoxJk8CASFOLV8VASCMpzMg0BQ\nhNN9EAjyd3Z75REIcheQB4EgdyHLR0UgyFxYHgSCrH3xx5Z8QCDIV+D2yiMQZCs8DwJBtgSWj4pA\nkCuRPAgEeZJZPioCQZak8iAQ5EiuDwJBdsS2Vx6BIDOSeRAIMiO6fFQEgrwI50EgyIp4HwSCfEhv\nrzwCQS4U8iAQ5EJj+agIBJnQyYNAkAetPggEGVDaXnkEguTp5UEgSJ7i8lERCFKnmgeBIG26y0dF\nIEjagb/P+SQCQbq0l4+KQJAu9e2VRyBI1BV5EAgSdcnyUREI0nRRHsFzdWy7uht6f+jaum7d1pHk\nSVG8y/oInatD7yo3Ds3tsGuca7pq40jypCjcVdsrT2SuutsoTeuP2n79SOGkKNWFeUgFclskhtEf\njcP6kcJJUaYrl49KZq5OW6zO+UOfytqR/ElRpmvzEJir9c2wDFSvHwmfFKW6ug+Juer6riEQXODi\n7ZUnMlfHjY3V5hZrJnFqFOTiqw/BWVpzkQ5tEZaPSnAF4W1eqIqSR/gHhaPz1yB+peCDQiiK1IfI\nrSbttJPiVhOoibO98rhZEfZFy4NAYF+85aMiEJgXMw8CgXFRl4+KQGCb/h9b8gGBwLDIy0dFIDAs\n9vbKIxBYZSAPAoFVFpaPikBglI08CAQ2WemDQGCQke2VRyAwx04eBAJzDC0fFYHAGlN5EAiMMdYH\ngcASW9srj0Bgh7k8CAR22Fs+KgKBGRbzIBBYYbMPAoEJJrdXHoHAAKt5EAgMMLt8VASC+AznQSCI\nzfLyUREIIov+x5Z8QCCIyfbyUREIYjK+vfIIBNHYz4NAEE0Cy0dFIIgliTwIBJEk0geBIIY0tlce\ngeB6yeRBILheOstHRSC4XEp5EAiullYfBIJLJbW98ggEF0otDwLBhZJbPioCwXUSzINAcJkk+yAQ\nXCPF7ZVHILhConkQCK6Q6vJREQgukG4eBAJ1/6XcB4FAWdJ5EAiUJd4HgUBTwlfndwQCPcnnQSDQ\nk/7yUREI1OSQB4FASx59hM7Vse3qoZ9Hmvgj19Z1616PJE8K+7LYXnmBc7Uexmrs+teRusa5pns9\nkjwpzMslj+C52vgvrnsZqWn917Z/PhI9KYzLZvmohOZq/TLSbVG5GYfnI4WTwqqM8pCZq/28gnR1\nN11vdP7LtKwsR/InhVVZ9SExV103LRS35eJ2vTE+hqyfj8RPCqNy2l554XPVzRupWT8QSNEyy0Ng\nrt7Xj98f1V9tsZa3hJGTrJYPmVn62scUCBfppcopj1+Bc/Wtj2mLxdu8hcqxj9C5OvTLkbtfpPNB\nYZGy2l4tQj9Jn7n5ppPu/QYTbjUpRp55cLMiRGS6fFQEAgnZ5kEgCJf2H1vyAYEgUM55EAhC5d0H\ngSBIvlfndwSCALnnQSAIkP3yUREIzisgDwLBaUX0QSA4p4TtlUcgOKOQPAgEZ5SyfFQEghPKyYNA\ncFxJfRAIDipoe+URCA4pKw8CwSGFLR8VgeCI4vIgEHzv3wL7IBB8q7ztlUcg+E6ReRAIvlPm8lER\nCL5Sah4Egi8Uu3xUBILPCs6DQPBR0X0QCPaVvL3yCAR7Cs+DQLCn9OWjIhDsIA8CwTb6qAgEW9he\nTQgEq8hjRiBYwfLxi0DwF3k8EAj+oI8FgeAN26tnBIJX5PGCQPCM5eMNgeAJebwjEDwU+ceWfEAg\n+MX2agWB4I481hAIJiwf6wgEHnlsIBCwfOwgELB87CAQ0McOAikd26tdBFI48thHIEVj+fiEQEpG\nHh8RSMHo4zMCKRbbq28EztWx7eqhnw5dW9et2zqSPCkkkMdXAudqPYzV2E2FdI1zTbd1JHlShGP5\n+FLgXG38F+cTaFp/2PbrR6InRTDy+JbIXPWD3JaSm3FYP1I4Kc6jj69JzNXeryCd84d+MVk7kj8p\nTmN7dYDAXHXduAxUrx+JnxSnkccR4XPVzRspAkkDy8cxwXN1Xj8ObrFmoafGceTxNZlZ+tsHF+kp\n4I8tOSxwrj764G3eBLC9Oi5wrg7L5OeDQuvI44TQT9JnruJWE+tYPk7hZsVCkMc5BFIElo+zCKQE\n5HEagRSAPs4jkOyxvQpBILkjjyAEkjeWj0AEkjXyCEUgOaOPYASSL7ZXAggkW+QhgUAyxfIhg0Dy\nRB5CCCRL9CGFQDLE9koOgeSHPAQRSG5YPkQRSGbIQxaBZOU/+hBGIDkhD3EEkhH6kEcg2eDqXAOB\n5II8VBBIHlg+lBBIFshDC4HkgD7UEEj62F4pIpDkkYcmAkkcy4cuAkkbeSgjkKTRhzYCSRjbK30E\nki7yuACBpIrl4xIEkijyuAaBpIk+LkIgKWJ7dRkCSRB5XIdAksPycSUCSQ15XIpA0sLycTECSQp5\nXI1AUkIflyOQdLC9ioBAkkEeMRBIIlg+4iCQNJBHJASSBPqIhUASwPYqHgKxjzwiIhDrWD6iIhDj\nyCMuArGNPiIjEMvYXkVHIIaRR3wEYhbLhwWhc3Vs6/sQ9cQfuds/a93rkehJi0AeJoTO1a5xv4E8\n/zPXdK9HoictAX3YIDBX3wNpWv+17Z+PxE+aOfKwQiGQYfRfx+H5SPykeaMPMwQD6epuut7o/JfK\ndc9H4ifNGVfnhsgFclsubtcb4/OK8ufqRO6kGSMPS+QCmfQDgYRh+bBFOBD/ltYXW6zlLWG8Ig8z\nxGbpeyBcpJ9HH9YobLF4m/cstlf2iAUy9O5+kc4HhSeRh0Ghc/WxURvb37d5udXkFJYPk7hZ0Qjy\nsIlAbKAPowjEArZXZhGIAeRhF4FEx/JhGYHERh6mEUhk9GEbgUTF9so6AomJPMwjkHhYPhJAINGQ\nRwoIJBb6SAKBxPHz80/sl4BvEEgULB+pIJAIuDpPB4FcjzwSQiBXY/lICoFcjDzSQiDXoo/EEMiV\n2F4lh0AuRB7pIZDLsHykiECuQh5JIpCL0EeaCOQSbK9SRSBXII9kEYg+lo+EEYg68kgZgWijj6QR\niC62V4kjEFXkkToCUcTykT4C0UMeGSAQNfSRAwJRwh9bkgcC0cHykQkC0cDVeTYIRAF55INAxLF8\n5IRApJFHVghEGH3khUBEsb3KDYFIIo/sEIgclo8MEYgY8sgRgUihjywRiAy2V5kiEBHkkSsCEcDy\nkS8CCUceGSOQYPSRMwIJxPYqbwQShjwyRyAhWD6yRyAByCN/oXN1bOv7EO521LqtI9GT2sDyUYLQ\nudo1rn4cuabbOhI9qQnkUQSBuToP0bT+a9uvH4mfNDr6KINYIMPov47D+pH4SSNje1UKsUA657+6\nbv1I/KRxkUcxxAKpHz9YOxI/aUwsHwUhkMPIoyRxtliz8FPHQB+FEJulRV2ks70qDG/zHkIepREL\npIQPClk+yhM6V5eNWv63mpBHgbhZ8Wv0USIC+RLbqzIRyHfIo1AE8g2Wj2IRyBfIo1wE8hl9FIxA\nPuHvcy4agXzA8lE2AtnF1XnpCGQPeRSPQLaxfIBAtpEHCGQbfaAikC1srzAhkFXkgRmBrGD5wC8C\n+Ys88EAgf9AHFgTyhu0VnhHIK/LACwJ5xvKBNwTyhDzwjkAW9IE/COQX2yusIJA78sAaApmwfGAd\ngXjkgQ0EwvKBHQTC8oEdBEIf2FF6IGyvsKvwQMgD+4oOhOUDn5QcCHngo4IDoQ98VmwgbK/wjVID\nIQ98pcxAWD7wpSIDIQ98q8RA6ANfKy8Qtlc4oLhAyANHFBYIyweOKSsQ8sBBRQVCHziqoEDYXuG4\ncgIhD5xQSiAsHzilkEDIA+cUEQjLB84qIRDywGkFBEIfOC/7QNheIUTugZAHguQdCMsHAmUdCHkg\nlNxcrSf+yLV13brXI6WT7qIPBBMM5HHUNc413euR0kl3sL2CAIVAmtZ/bfvnI62TbiMPSFAIZBj9\n13F4PtI66RaWD8gQDKSru+l6o/NfKtc9H2mddAN5QIjcXL0tF7frjfExZP18pHXSdfQBKcJztR/i\nB8L2CnKE56qrv9piLW8JyyMPiFCZpT6QqBfpLB8QpbDFivk2L3lAlthcHXp3v0iP+EEhfUCY2Fwd\n29+3eaPdasL2CuIyulmRPCAvm0BYPqAhl0DIAyryCITlA0qyCIQ8oCWHQOgDatIPhO0VFCUfCHlA\nU+KBsHxAV9qBkAeUJR0IfUBbwoGwvYK+dAMhD1wg1UBYPnCJRAMhD1wjzUDoAxdJMRC2V7hMgoGQ\nB66TXCAsH7hSaoGQBy6VWCD0gWslFQh54GopBUIfuFw6gXB1jgiSCYQ8EEMigbB8II40AiEPRJJE\nIPSBWBIIhO0V4rEfCHkgIuuBsHwgKuOBkAfish0IfSAyy4GwvUJ0hgMhD8RnNhCWD1hgNRDygAlG\nA6EP2GAyELZXsMJiIOQBM+wFwvIBQ8wFQh6wxFog9AFTbAXC9grGmAqEPGCNoUBYPmCPnUDIAwZZ\nCYTlAyYZCYQ8YJONQOgDRlkIhO0VzDIQCHnAruiBsHzAstiBkAdMixwIfcA25UBcW9et2zop2ytY\npxxI1zjXdBsn1cpD+Xti+JKG1z1j0/qvbb92Ur3lI7vfJIaPN7zuGYfRfx2HlZMq7q6y+01i+HjD\n656xc/6re99j1bpX59n9JjF8vOF1z1ivn6TWvTrP7jeJ4eMNHymQK87K8AwfPnycLRaQCtVANi7S\nAXgbb/MCmKx/UAhgsn6rCQAAAAAAAAAAQJ40PhtZbptZRpc5z9j+3o6zNnLwOZbhNb6Fse3qYb6P\nQePVPw2v9eq7eXytV38fXm/6nKHx6fpyS9kyusx5bqPU2yMHn2MZXuNbqIexGrt+a1DB4TVe/dC7\nyo1DszGo4PB60+cElfuzHt/hMrrceerNkUXO8R6I4PD+N3++mVrl1S/DK/4G+P+AqP3az8PrTp+j\nVO7wfXyHy+hy56k3RxY5x3sg4t9CvTGo4PCKr94HqPjqp75Vp89RG8+IhKlv28lpw7iMLnee+Zdv\nbWSRc/wGovUt9N3GoILD6736aQ+k9+rvWyzN6XPUxlOGYW693zaM4/Pocuepnweqxc9x/9la34Lz\nY+q9+nl4pVfvL52HSu3V/w6vO30Ovyq1M/dDyoFM5L8FN+8VtF79ffiZwm+A67tGM+9p+JnW9DlK\nb+3y11vpbrEm4t/C/T/wWq/+d/j7jzR+A8aN1yw4/Exr+hyld/Xjv8N0L9In0t/CYwLrvPrXPpR+\nAzYGFRx+pjV9jtJ7/8yvkem+zTsR/haWCazy6t/60PkN8P+JV3ybd1lBtKbPYQqfwEyf+UxXWRqf\n9NxnsMoHhY/hVb6FYfn91fmobTnSePWj8xcJW4PKDa87fQ5T+Ax/umtA/DaQyfKHv6jcavIYXuVb\nuI/uNgaVG17l1c+DjluDyg2vOH0AAAAAAAAAAAAAAAAAAAAAAIjjf+R0PUPkUqtGAAAAAElFTkSu\nQmCC\n",
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "set term png size 800,600\n",
-       "Terminal type set to 'png'\n",
-       "Options are 'nocrop enhanced size 800,600 font \"/usr/share/fonts/dejavu/DejaVuSans.ttf,12\" '\n",
-       "set xrange [0:3600]\n",
-       "set output '/tmp/gnuplot-inline-1474451225.1230764.876808992312.png'\n",
-       "plot \"10s_sync_10Hz_0.csv\" u ($0/10):1 w l t \"Node 1\" lt rgb \"#BE1E3E\" lw 1 , \"10s_sync_10Hz_1.csv\" u ($0/10):1 w l t \"Node 2\" lt rgb \"#acc13a\" lw 1,  \"10s_sync_10Hz_2.csv\" u ($0/10):1 w l t \"Node 3\" lt rgb \"#007a9b\" lw 1, \"10s_sync_10Hz_3.csv\" u ($0/10):1 w l t \"Node 4\" lt rgb \"#8a307f\" lw 1\n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "gnuplot> \n",
-       "unset output\n"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set term png size 800,600\n",
     "set xrange [0:3600]\n",
@@ -126,6 +60,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1,
- "git" : { "suppress_outputs" : true }
+ "nbformat_minor": 1
 }
